# myhellocmake

./: .gitignore  readme.txt
consumer/: CMakeLists.txt  build.sh  main.cpp
producer/: CMakeLists.txt  build.sh
producer/cmake/: hellocmakeConfig.cmake.in
producer/include/: helper.hpp
producer/src/: helper.cpp
